# claude-memory

./: .dockerignore  .env.example  .gitignore  AI_INSTRUCTIONS.md  BENEFITS.md  Banish_Daem0n.md  CLAUDE.md  CLAUDE_CONFIG_INSTRUCTIONS.md  Dockerfile  GEMINI.md  GETTING_STARTED.md  INSTALLATION_GUIDE.md  LICENSE  README.md  SETUP_GUIDE.md  Setup.md  Summon_Daem0n.md  UPSTREAM_MAPPING.md  Uninstall.md  cascade_detector.py  change_analyzer.py  cli.py  context_manager.py  docker-compose.yml  models.py  pyproject.toml  pytest.ini  requirements.txt  server.py  setup.py  start_claude_memory_server.bat  start_server.py  task_manager.py  temp_output.json  temp_output.txt
.claude-plugin/: plugin.json
.claude/skills/claude-memory-protocol/: SKILL.md
.claude/skills/openspec-memory-bridge/: SKILL.md
.claude/skills/setup-guide/: SKILL.md
.devilmcp/storage/: devilmcp.db
.github/workflows/: ci.yml
claude_memory/: __init__.py  __main__.py  active_context.py  cache.py  cli.py  code_indexer.py  communities.py  config.py  context_triggers.py  covenant.py  database.py  enforcement.py  entity_extractor.py  entity_manager.py  hooks.py  links.py  logging_config.py  memory.py  models.py  protocol.py  qdrant_store.py  rules.py  server.py  similarity.py  vectors.py  watcher.py
claude_memory/channels/: __init__.py  editor_poll.py  log_notify.py  system_notify.py
claude_memory/migrations/: __init__.py  migrate_vectors.py  schema.py
daem0nmcp/: __init__.py  active_context.py  cache.py  cli.py  code_indexer.py  config.py  covenant.py  database.py  enforcement.py  links.py  logging_config.py  memory.py  migrations.py  models.py  rules.py  server.py  similarity.py  vectors.py
devilmcp/: __init__.py  alembic.ini  cascade_detector.py  change_analyzer.py  cli.py  config.py  context_manager.py  database.py  decision_tracker.py  memory.py  migrations.py  models.py  process_manager.py  requirements.txt  rules.py  server.py  setup.py  similarity.py  subprocess_executor.py  task_manager.py  thought_processor.py  tool_registry.py  tools.toml.example
devilmcp/alembic/: env.py
devilmcp/alembic/versions/: 001_initial_schema.py
devilmcp/parsers/: __init__.py  base.py  javascript_parser.py  python_parser.py  typescript_parser.py
docker/: entrypoint.sh
docs/: global-memory-guide.md  index.html  multi-repo-setup.md  openspec-integration.md
docs/plans/: 2025-12-04-tool-executor-implementation.md  2025-12-04-tool-executor-refactor-design.md  2025-12-21-daem0nmcp-enhancements.md  2025-12-23-enhanced-bootstrap-design.md  2026-01-02-cognitive-architecture-upgrade.md  2026-01-06-enhancement-iterations-assessment.md  iteration-1-search-quality.md  iteration-2-code-entity-fidelity.md  iteration-3-impact-watcher.md  iteration-4-performance-ux.md
hooks/: claude_memory_post_edit_hook.py  claude_memory_pre_edit_hook.py  claude_memory_prompt_hook.py  claude_memory_stop_hook.py  settings.json.example
scripts/: migrate_to_v2.py  pre-commit
tests/: conftest.py  test_active_context.py  test_bootstrap.py  test_classification.py  test_cli.py  test_code_entity_fidelity.py  test_code_indexer.py  test_communities.py  test_compact.py  test_concurrency.py  test_context.py  test_context_triggers.py  test_covenant.py  test_covenant_integration.py  test_database.py  test_endless_mode.py  test_enforcement.py  test_entity_extraction.py  test_fts.py  test_full_covenant_flow.py  test_full_protocol_flow.py  test_git.py  test_global_integration.py  test_graph.py  test_incremental_indexing.py  test_index_freshness.py  test_ingest.py  test_integration.py  test_linked_projects.py  test_memory.py  test_migrations.py  test_ops.py  test_passive_capture.py  test_performance_ux.py  test_protocol.py  test_protocol_integration.py  test_resources.py  test_rules.py  test_scanner.py  test_search_quality.py  (+5 more)
