[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daem0nmcp"
version = "2.7.0"
description = "AI Memory & Decision System - Give AI agents persistent memory and consistent decision-making"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Daem0nMCP"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.2.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "pydantic-settings>=2.0.0",
    # Web ingestion
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    # Vector embeddings
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
daem0nmcp = "daem0nmcp.server:main"

[project.urls]
Homepage = "https://github.com/DasBluEyedDevil/Daem0n-MCP"
Repository = "https://github.com/DasBluEyedDevil/Daem0n-MCP"

[tool.setuptools.packages.find]
where = ["."]
include = ["daem0nmcp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
