[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-memory"
version = "2.16.0"
description = "Persistent memory for Claude Code - semantic search, decision tracking, and outcome recording"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Hugh Ryan"},
    {name = "DasBluEyedDevil (upstream)"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.2.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0.0",  # Required for SQLAlchemy async
    "pydantic-settings>=2.0.0",
    # Web ingestion
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    # Vector embeddings
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    # Vector database
    "qdrant-client>=1.7.0",
    # Phase 1: File watching + notifications
    "watchdog>=3.0.0",
    "plyer>=2.1.0",
    # Phase 2: Code understanding (tree-sitter-language-pack has Python 3.14 wheels)
    "tree-sitter-language-pack>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
claude-memory = "claude_memory.server:main"

[project.urls]
Homepage = "https://github.com/hughryan/claude-memory"
Repository = "https://github.com/hughryan/claude-memory"
Upstream = "https://github.com/DasBluEyedDevil/Daem0n-MCP"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_memory*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
